# duckdb-spatial

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  generate_function_reference.py  test.arrows  vcpkg.json
src/spatial/: CMakeLists.txt  spatial_extension.cpp  spatial_extension.hpp  spatial_geoarrow.cpp  spatial_geoarrow.hpp  spatial_optimizers.cpp  spatial_optimizers.hpp  spatial_types.cpp  spatial_types.hpp
src/spatial/geometry/: CMakeLists.txt  bbox.hpp  geometry_processor.cpp  geometry_processor.hpp  geometry_properties.hpp  geometry_serialization.cpp  geometry_type.hpp  sgl.hpp  vertex.hpp  wkb_writer.cpp  wkb_writer.hpp
src/spatial/index/rtree/: CMakeLists.txt  rtree.cpp  rtree.hpp  rtree_index.cpp  rtree_index.hpp  rtree_index_create_logical.cpp  rtree_index_create_logical.hpp  rtree_index_create_physical.cpp  rtree_index_create_physical.hpp  rtree_index_plan_create.cpp  rtree_index_plan_scan.cpp  rtree_index_pragmas.cpp  rtree_index_scan.cpp  rtree_index_scan.hpp  (+3 more)
src/spatial/modules/: CMakeLists.txt
src/spatial/operators/: CMakeLists.txt  spatial_join_logical.cpp  spatial_join_logical.hpp  spatial_join_optimizer.cpp  spatial_join_optimizer.hpp  spatial_join_physical.cpp  spatial_join_physical.hpp  spatial_operator_extension.cpp  spatial_operator_extension.hpp
src/spatial/serde/: CMakeLists.txt  geometry_serialization.cpp  geometry_serialization.hpp
src/spatial/util/: CMakeLists.txt  binary_reader.hpp  binary_writer.hpp  cursor.hpp  function_builder.cpp  function_builder.hpp  managed_collection.hpp  math.cpp  math.hpp
(+138 files in other folders)
